--- a/Portfolio/index.html
+++ b/Portfolio/index.html
@@ -20,7 +20,7 @@
                 </div>
                 <nav>
                     <ul id="MenuItems">
-                        <li><a href="home.html">Home</a></li>
+                        <li><a href="index.html">Home</a></li>
                         <li><a href="projects.html">Projects</a></li>
                         <li><a href="about.html">About Me</a></li>
                     </ul>
@@ -169,4 +169,5 @@
 </script>
 
 </html>
+
 
