--- a/projects.html
+++ b/projects.html
@@ -92,4 +92,15 @@
     </div>
 
 </body>
+
+<!-- Links to Github -->
+<script>
+    function changetoDesign() {
+        window.location.href = "https://github.com/Git-Allius/Ella-Design-Design.git"
+    }
+
+    function changetoMern() {
+        window.location.href = "https://github.com/Git-Allius/Ella-Design-Mern.git"
+    }
+</script>
 </html>
