--- a/index.html
+++ b/index.html
@@ -109,13 +109,13 @@
         <div class="container">
             <h2 class="title">Projects</h2>
             <div class="row">
-                <div class="col-2">
+                <div class="col-2" onclick="changetoDesign()">
                     <img src="images/design.png">
                     <br>
                     <br>
                     <p class="label">Ella Design - Design</p>
                 </div>
-                <div class="col-2">
+                <div class="col-2" onclick="changetoMern()">
                     <img src="images/mern.png">
                     <br>
                     <br>
@@ -169,4 +169,5 @@
 </script>
 
 </html>
+
 
