--- a/projects.html
+++ b/projects.html
@@ -41,7 +41,7 @@
         <div class="container">
             <h2 class="title">Projects</h2>
             <div class="row">
-                <div class="col-2">
+                <div class="col-2" onclick="changetoDesign()">
                     <img src="images/design.png">
                     <br>
                     <br>
@@ -49,7 +49,7 @@
                     <br>
                     <p class="description">This is the first part of Ella Design, where I mainly focus on the HTML, CSS, and JavaScript code. I am trying to get the basic design out before I convert it into a MERN app.</p>
                 </div>
-                <div class="col-2">
+                <div class="col-2" onclick="changetoMern()">
                     <img src="images/mern.png">
                     <br>
                     <br>
