--- a/projects.html
+++ b/projects.html
@@ -37,25 +37,29 @@
 
     <!-- projects -->
 
-    <div class="projects">
+        <div class="projects">
         <div class="container">
             <h2 class="title">Projects</h2>
             <div class="row">
-                <div class="col-2" onclick="changetoDesign()">
+                <div class="col-2">
                     <img src="images/design.png">
                     <br>
                     <br>
                     <p class="label">Ella Design - Design</p>
                     <br>
                     <p class="description">This is the first part of Ella Design, where I mainly focus on the HTML, CSS, and JavaScript code. I am trying to get the basic design out before I convert it into a MERN app.</p>
+                    <p class="code-link" onclick="changetoDesign()">Code</p>
+                    <a href="https://git-allius.github.io/Ella-Design-Design/">Website</a>
                 </div>
-                <div class="col-2" onclick="changetoMern()">
+                <div class="col-2">
                     <img src="images/mern.png">
                     <br>
                     <br>
                     <p class="label">Ella Design - Mern</p>
                     <br>
                     <p class="description">This is the MERN app code for the Ella Design. I transfer all of the design code into a React application, and build the backend with Express and Node.js, with a Mongoose database.</p>
+                    <p class="code-link" onclick="changeToMern()">Code</p>
+                    <br>
                 </div>
             </div>
             <div class="row">
