Fix HTML formatting and update project links

--- a/index.html
+++ b/index.html
@@ -109,20 +109,24 @@
         <div class="container">
             <h2 class="title">Projects</h2>
             <div class="row">
-                <div class="col-2" onclick="changetoDesign()">
+                <div class="col-2">
                     <img src="images/design.png">
                     <br>
                     <br>
                     <p class="label">Ella Design - Design</p>
+                    <p class="code-link" onclick="changetoDesign()">Code</p>
+                    <a href="https://git-allius.github.io/Ella-Design-Design/">Website</a>
                 </div>
-                <div class="col-2" onclick="changetoMern()">
+                <div class="col-2">
                     <img src="images/mern.png">
                     <br>
                     <br>
                     <p class="label">Ella Design - Mern</p>
+                    <p class="code-link" onclick="changeToMern()">Code</p>
                 </div>
             </div>
-            <div class="row">
+
+            </div>
                 <div class="col">
                     <hr class="technology-indicator">
                 </div>
@@ -169,5 +173,6 @@
 </script>
 
 </html>
+
 
 
