Fix HTML formatting and update project links

--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
                     <br>
                     <p class="label">Ella Design - Design</p>
                     <p class="code-link" onclick="changetoDesign()">Code</p>
-                    <a href="https://git-allius.github.io/Ella-Design-Design/">Website</a>
+                    <a href="https://git-allius.github.io/EllaDesign_Design/">Website</a>
                 </div>
                 <div class="col-2">
                     <img src="images/mern.png">
@@ -164,7 +164,7 @@
 <!-- Links to Github -->
 <script>
     function changetoDesign() {
-        window.location.href = "https://github.com/Git-Allius/Ella-Design-Design.git"
+        window.location.href = "https://github.com/Git-Allius/EllaDesign_Design.git"
     }
 
     function changetoMern() {
@@ -173,6 +173,7 @@
 </script>
 
 </html>
+
 
 
 
