Fix links for Ella Design project

--- a/projects.html
+++ b/projects.html
@@ -49,7 +49,7 @@
                     <br>
                     <p class="description">This is the first part of Ella Design, where I mainly focus on the HTML, CSS, and JavaScript code. I am trying to get the basic design out before I convert it into a MERN app.</p>
                     <p class="code-link" onclick="changetoDesign()">Code</p>
-                    <a href="https://git-allius.github.io/Ella-Design-Design/">Website</a>
+                    <a href="https://git-allius.github.io/EllaDesign_Design/">Website</a>
                 </div>
                 <div class="col-2">
                     <img src="images/mern.png">
@@ -100,7 +100,7 @@
 <!-- Links to Github -->
 <script>
     function changetoDesign() {
-        window.location.href = "https://github.com/Git-Allius/Ella-Design-Design.git"
+        window.location.href = "https://github.com/Git-Allius/EllaDesign_Design.git"
     }
 
     function changetoMern() {
